<resources>
    <string name="app_name">Negi</string>
    <string name="activity_main_header">Accounts</string>
    <string name="activity_main_account_error">Unable to load accounts.</string>
    <string name="activity_main_menu_settings_label">Settings</string>
    <string name="activity_main_menu_export_accounts_label">Export accounts</string>
    <string name="activity_main_add_account_fab_content_description">Add account</string>
    <string name="activity_add_account_header">Add account</string>
    <string name="activity_add_account_account_name_hint">Account name</string>
    <string name="activity_add_account_username_hint">Username</string>
    <string name="activity_add_account_secret_hint">Secret</string>
    <string name="activity_add_account_done_button_label">Done</string>
    <string name="activity_add_account_error">Couldn\'t add the account.</string>
    <string name="activity_account_details_card_label_text">Verification code</string>
    <string name="activity_auth_biometric_prompt_title">Authentication required</string>
    <string name="activity_auth_biometric_prompt_subtitle">Please verify your identity to access Negi</string>
    <string name="activity_auth_keyguard_removed_toast_text">App lock was disabled because your screen lock was removed.</string>
    <string name="activity_auth_unlock_button_text">Unlock Negi</string>
    <string name="activity_preferences_title">Settings</string>
    <string name="activity_preferences_security_section_header">Security</string>
    <string name="activity_preferences_app_lock_title">App lock</string>
    <string name="activity_preferences_app_lock_description">Require biometric authentication or your screen lock when opening the app</string>
    <string name="activity_preferences_app_lock_unavailable">Unavailable because no screen lock is set</string>
    <string name="activity_preferences_general_section_header">General</string>
    <string name="activity_preferences_theme_title">Theme</string>
    <string name="activity_preferences_oss_title">Open-source licenses</string>
    <string name="activity_preferences_oss_description">Licenses for libraries used to build this app</string>
    <string name="activity_preferences_theme_default_description">Follow system</string>
    <string name="activity_preferences_biometric_auth_description">Verify your screen lock to toggle app lock</string>
</resources>